[package]
name = "hamilton_controller"
version = "0.1.0"
authors = ["David Michael Weis <dweis7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "simple_remote"

[[bin]]
name = "openvr_tracker"

[dependencies]
rumqtt = "0.31"
kiss3d = "0.26"
nalgebra = "0.22"
openvr = "0.6"
palette = "0.5"
simplelog = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tonic = "0.3"
tokio = { version = "0.2.22", features = ["time", "rt-threaded", "sync", "stream"] }
prost = "0.6"
gilrs = "0.8"
pid_control = "0.7"


[build-dependencies]
tonic-build = { version = "0.3", features = ["prost"] }
